<resources>
    <string name="app_name">NotesApp</string>
    <string name="notes">Нотатки</string>
    <string name="progress">0%</string>
    <string name="add">+</string>
    <string name="note_name">Нотатка:</string>
    <string name="delete">Видалити</string>
    <string name="note_desc">Опис:</string>
    <string name="note_date">Дата нотатки:</string>
    <string name="note_id">№:</string>
    <string name="choose_date">Choose Date</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>