<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextNoteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/note_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:importantForAutofill="no" />

    <EditText
        android:textColorHint="#546E7A"
        android:id="@+id/editTextNoteDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/note_desc"
        android:inputType="text"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/choose_date"
        android:textStyle="bold"
        android:textSize="18sp"
        android:backgroundTint="#000"
        app:cornerRadius="1dp"
        android:text="@string/choose_date"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:backgroundTint="#ff0000"
            android:text="@string/cancel"
            android:textColor="#000000"
            android:textSize="18sp"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="#45C513"
            android:text="@string/save"
            android:textColor="#4527A0"
            android:textSize="18sp"
            app:cornerRadius="1dp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</LinearLayout>